coding session is postponed

--- a/index.html
+++ b/index.html
@@ -69,6 +69,21 @@
                 </div>
             </div>
         </section>
+
+        <section class="products">
+            <div class="shoes">
+                <div class="product-heading">
+                    <p class="product-name">Shoes</p>
+                    <p class="see-all-link">See All</p>
+                </div>
+                <div class="product-cards">
+                    <div class="product-card">
+                        <img src="./assets/images/shoes/shoe-1.png" alt="">
+                        <h4>Reb</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
